--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ plugins {
 
 group = 'org.gnit.bible.cli'
 version = '1.4'
+def appName = 'bbl'
 
 task versionTxt() {
     doLast {
@@ -108,6 +109,10 @@ application {
 }
 
 jar {
+     manifest {
+         attributes 'Main-Class': 'org.gnit.bible.cli.MainKt'
+     }
+
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 
     from('src/main/resources') {
@@ -118,36 +123,77 @@ jar {
 }
 
 jlink {
+
     mergedModule {
         additive = true
         forceMerge "kotlin"
     }
 
-    def resourceDir = "src/main/resources/installer"
+    options = [
+        '--strip-debug',
+        '--compress', 'zip-9',
+        '--no-header-files',
+        '--no-man-pages'
+    ]
 
+    def installerResources = "src/main/resources/installer"
+
+    // Generate script files for launching the app. Env vars be included like this: {{ MY_VAR }}
+    // {{BIN_DIR}} - the bin directory of the custom runtime image
+    // {{HOME_DIR}} - user’s home directory ($HOME on Unix-like systems, %USERPROFILE% on Windows)
     launcher {
-        name = 'bbl'
+        name = "$appName"
+        // jvmArgs = ''
+        // args = ''
+        // noConsole = ''
+        // unixScriptTemplate = ''
+        // windowsScriptTemplate = ''
     }
 
     //https://badass-jlink-plugin.beryx.org/releases/latest/#_jpackage
     jpackage {
-        installerName = 'bbl'
+
+        skipInstaller = (System.getenv("SKIP_INSTALLER") ?: "").length() > 0
+
+        // // Convenience property for setting imageOutputDir and installerOutputDir
+        // // defaultValue: "jpackage"
+        // outputDir = ""
+
+        // // passed to jpackage's '--output' option when executing the 'jpackageImage' task
+        // // defaultValue: buildDir/outputDir
+        // imageOutputDir = ""
+
+        // // passed to jpackage's '--output' option when executing the 'jpackage' task
+        // // defaultValue: buildDir/outputDir
+        // installerOutputDir = ""
+
+        // passed to jpackageImage's '--name' option. Defaults to launcher.name or project.name
+        // imageName = ""
+
+        // passed to jpackage's '--name' option. Defaults to launcher.name or project.name
+        // installerName = ""
 
         appVersion = "$version"
+
         installerOptions += [
-                '--copyright', 'Copyright © 2022, Joel H. Ide, gnit.org',
-                '--vendor', 'Gospel and Information Technology',
-                '--description', 'bbl, command line bible reader'
+            '--copyright', 'Copyright © 2022, Joel H. Ide, gnit.org',
+            '--vendor', 'Gospel and Information Technology',
+            '--description', 'bbl, command line bible reader',
+            '--strip-debug'
         ]
 
         //https://wix-tutorial-ja.github.io/ch01/index.html
         if (org.gradle.internal.os.OperatingSystem.current().windows) {
-            icon = "$resourceDir/bbl.ico"
-            installerOptions += ['--win-per-user-install',
-                                 '--win-dir-chooser',
-                                 '--win-menu',
-                                 '--win-shortcut',
-                                 '--resource-dir', (resourceDir + "/windows")]
+            outputDir = "jpackage/windows"
+
+            icon = "$installerResources/bbl.ico"
+            installerOptions += [
+                '--win-per-user-install',
+                '--win-dir-chooser',
+                '--win-menu',
+                '--win-shortcut',
+                '--resource-dir', (installerResources + "/windows")
+            ]
 
             imageOptions += ['--win-console']
 
@@ -157,19 +203,19 @@ jlink {
                 //jdkHome = "C:\\Program Files\\OpenJDK\\jdk-16"
                 jdkHome = "$System.env.JAVA_HOME"
             }
-            outputDir = "jpackage/windows"
         }
 
         //https://docs.oracle.com/javase/jp/14/docs/specs/man/jpackage.html
         //https://developer.apple.com/jp/developer-id/
         //https://stackoverflow.com/questions/44081611/how-can-i-change-the-icon-used-by-javapackager-for-pkg-installers
         if (org.gradle.internal.os.OperatingSystem.current().macOsX) {
-            icon = "$resourceDir/bbl.icns"
+            outputDir = "jpackage/macos"
+
+            icon = "$installerResources/bbl.icns"
             installerType = 'pkg'
             installerOptions += [/*'--mac-sign', //TODO input after enrolling developer program
                                  '--mac-signing-key-user-name', 'x',*/
-                                 '--resource-dir', (resourceDir + "/macos")]
-            outputDir = "jpackage/macos"
+                                 '--resource-dir', (installerResources + "/macos")]
         }
 
         //https://docs.oracle.com/en/java/javase/16/jpackage/override-jpackage-resources.html#GUID-405708DC-0243-49FC-84D9-B2A7F0A011A9
@@ -180,9 +226,11 @@ jlink {
         //https://www.debian.org/doc/debian-policy/ch-controlfields.html
         //https://www.debian.org/doc/debian-policy/ch-maintainerscripts.html
         if (org.gradle.internal.os.OperatingSystem.current().linux) {
-            icon = "$resourceDir/bbl.png"
+            outputDir = "jpackage/linux"
+
+            icon = "$installerResources/bbl.png"
             installerOptions += ['--install-dir', '/usr/local/lib',
-                                 '--resource-dir', (resourceDir + "/linux"),
+                                 '--resource-dir', (installerResources + "/linux"),
                                  '--linux-deb-maintainer', 'nehemiaharchive@gmail.com'
             ]
 
@@ -193,9 +241,8 @@ jlink {
                 //jdkHome = "/usr/lib/jvm/java-17-openjdk-amd64"
 
                 //in gradle:7.5.1-jdk17-focal docker image
-                jdkHome = "/opt/java/openjdk"
+                jdkHome = System.getenv("JAVA_HOME") ?: "/opt/java/openjdk"
             }
-            outputDir = "jpackage/linux"
         }
     }
 
